--- a/settings/project.json
+++ b/settings/project.json
@@ -19,7 +19,7 @@
     "height": 640,
     "width": 960
   },
-  "last-module-event-record-time": 0,
+  "last-module-event-record-time": 1614076743891,
   "assets-sort-type": "name",
   "facebook": {
     "appID": "",
@@ -30,5 +30,6 @@
     "live": {
       "enable": false
     }
-  }
+  },
+  "start-scene": "current"
 }
